<?xml version="1.0"?>
<package format="2">
  <name>dji_m100_controllers_gazebo</name>
  <version>0.3.5</version>
  <description>The dji_m100_controllers_gazebo package implements the ros_control RobotHWSim interface.</description>

  <license>MIT</license>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Kose</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo</exec_depend>
  <depend version_gte="2.3.4">gazebo_ros_control</depend>
  <depend>hector_quadrotor_interface</depend>
  <depend>hector_quadrotor_controllers</depend>
  <depend>roscpp </depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros_control plugin="${prefix}/dji_m100_controller_gazebo.xml"/>
  </export>
</package>
